<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:padding="16dp">

    <!-- Гайдлайны -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <!-- Кнопка Назад -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_arrow_back"
        android:contentDescription="@string/back_button"
        app:tint="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Обложка альбома -->
    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:src="@drawable/track_cover_placeholder" />

    <!-- Название трека -->
    <TextView
        android:id="@+id/track_name"
        style="@style/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnSecondary"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        tools:text="Yesterday (remastered 2009)" />

    <!-- Исполнитель -->
    <TextView
        android:id="@+id/artist_name"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_text_size"
        android:layout_marginTop="12dp"
        android:textColor="?attr/colorOnSecondary"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="The Beatles" />

    <!-- Панель управления (ConstraintLayout) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name">

        <ImageView
            android:id="@+id/add_to_playlist"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/add_to_playlist"
            android:src="@drawable/icon_add_playlist"
            app:layout_constraintBottom_toBottomOf="@id/play_pause"
            app:layout_constraintEnd_toStartOf="@id/play_pause"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/play_pause" />

        <ImageView
            android:id="@+id/play_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/icon_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_to_favorites"
            app:layout_constraintStart_toEndOf="@id/add_to_playlist"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_to_favorites"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/add_to_favorites"
            android:src="@drawable/icon_unlike"
            app:layout_constraintBottom_toBottomOf="@id/play_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/play_pause"
            app:layout_constraintTop_toTopOf="@id/play_pause"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Прогресс воспроизведения -->
    <TextView
        android:id="@+id/progress"
        style="@style/DataTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@id/control_panel"
        app:layout_constraintEnd_toEndOf="@id/control_panel"
        app:layout_constraintTop_toBottomOf="@id/control_panel"
        tools:text="00:00" />

    <!-- Информационный блок с равными интервалами -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/progress">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labels_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="duration_label,album_label,year_label,genre_label,country_label" />

        <!-- Duration -->
        <TextView
            android:id="@+id/duration_label"
            style="@style/TitleTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/duration"
            app:layout_constraintBottom_toTopOf="@id/album_label"
            app:layout_constraintEnd_toStartOf="@id/track_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/track_time"
            style="@style/DataTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/duration_label"
            app:layout_constraintTop_toTopOf="@id/duration_label"
            app:layout_constraintHorizontal_weight="0.65"
            tools:text="3:45" />

        <!-- Album -->
        <TextView
            android:id="@+id/album_label"
            style="@style/TitleTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/album"
            app:layout_constraintBottom_toTopOf="@id/year_label"
            app:layout_constraintEnd_toStartOf="@id/collection_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration_label"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/collection_name"
            style="@style/DataTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/album_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/album_label"
            app:layout_constraintTop_toTopOf="@id/album_label"
            app:layout_constraintHorizontal_weight="0.65"
            tools:text="Yesterday (Remastered 2009)" />

        <!-- Year -->
        <TextView
            android:id="@+id/year_label"
            style="@style/TitleTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@id/genre_label"
            app:layout_constraintEnd_toStartOf="@id/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_label"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/release_date"
            style="@style/DataTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/year_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/year_label"
            app:layout_constraintTop_toTopOf="@id/year_label"
            app:layout_constraintHorizontal_weight="0.65"
            tools:text="1965" />

        <!-- Genre -->
        <TextView
            android:id="@+id/genre_label"
            style="@style/TitleTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@id/country_label"
            app:layout_constraintEnd_toStartOf="@id/primary_genre_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_label"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/primary_genre_name"
            style="@style/DataTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/genre_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/genre_label"
            app:layout_constraintTop_toTopOf="@id/genre_label"
            app:layout_constraintHorizontal_weight="0.65"
            tools:text="Rock" />

        <!-- Country -->
        <TextView
            android:id="@+id/country_label"
            style="@style/TitleTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_label"
            app:layout_constraintHorizontal_weight="0.35"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/country"
            style="@style/DataTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/country_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/country_label"
            app:layout_constraintTop_toTopOf="@id/country_label"
            app:layout_constraintHorizontal_weight="0.65"
            tools:text="Великобритания" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>